@@ -952,7 +952,16 @@ def display_command(func):
     return ignore_pipe
 
 
-def main(argv):
+def main(argv=None):
+    """Main entry point of command-line interface.
+
+    :param argv: list of unicode command-line arguments similar to sys.argv.
+        argv[0] is script name usually, it will be ignored.
+        Don't pass here sys.argv because this list contains plain strings
+        and not unicode; pass None instead.
+
+    :return: exit code of bzr command.
+    """
     import bzrlib.ui
     bzrlib.ui.ui_factory = bzrlib.ui.make_ui_for_terminal(
         sys.stdin, sys.stdout, sys.stderr)
@@ -961,12 +970,17 @@ def main(argv):
     if bzrlib.version_info[3] == 'final':
         from bzrlib import symbol_versioning
         symbol_versioning.suppress_deprecation_warnings(override=False)
-    try:
-        user_encoding = osutils.get_user_encoding()
-        argv = [a.decode(user_encoding) for a in argv[1:]]
-    except UnicodeDecodeError:
-        raise errors.BzrError(("Parameter '%r' is unsupported by the current "
-                                                            "encoding." % a))
+    if argv is None:
+        argv = osutils.get_unicode_argv()
+    else:
+        argv = argv[1:]
+        try:
+            # check for presence of non-ascii strings
+            for a in argv:
+                if not isinstance(a, unicode):
+                    a.decode('ascii')
+        except UnicodeDecodeError:
+            raise errors.BzrError("argv should be list of unicode strings.")
     ret = run_bzr_catch_errors(argv)
     trace.mutter("return code %d", ret)
     return ret
